force-app/main/default/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AppraisalCycle__c</fullName>
        <label>Appraisal Cycle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appraiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Master (Appraiser)</relationshipLabel>
        <relationshipName>Employee_Master1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Band B</fullName>
                </value>
                <value>
                    <fullName>Band C</fullName>
                </value>
                <value>
                    <fullName>Band E</fullName>
                </value>
                <value>
                    <fullName>Band M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelegatedAppraiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Appraiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Master (Delegated Appraiser)</relationshipLabel>
        <relationshipName>Employee_Master3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DelegatedReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Master (Delegated Reviewer)</relationshipLabel>
        <relationshipName>Employee_Master4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Band__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATE CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATE DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>ASSOCIATE MANAGER</fullName>
                </value>
                <value>
                    <fullName>AVP(ASSOCIATE VICE PRESIDENT)</fullName>
                </value>
                <value>
                    <fullName>CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>DIRECTOR - HUMAN RESOURCES</fullName>
                </value>
                <value>
                    <fullName>EXECUTIVE</fullName>
                </value>
                <value>
                    <fullName>EXECUTIVE VP</fullName>
                </value>
                <value>
                    <fullName>GROUP PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>GROUP QA MANAGER</fullName>
                </value>
                <value>
                    <fullName>INDUSTRY PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>LEAD CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>MANAGEMENT TRAINEE</fullName>
                </value>
                <value>
                    <fullName>MANAGER</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>PRINCIPAL TECHNOLOGY ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>QA LEAD</fullName>
                </value>
                <value>
                    <fullName>QA MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>SENIOR DIRECTOR</fullName>
                </value>
                <value>
                    <fullName>SENIOR EXECUTIVE</fullName>
                </value>
                <value>
                    <fullName>SENIOR INDUSTRY PRINCIPAL</fullName>
                </value>
                <value>
                    <fullName>SENIOR LEAD CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>SENIOR MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR PROJECT MANAGER</fullName>
                </value>
                <value>
                    <fullName>SENIOR QA LEAD</fullName>
                </value>
                <value>
                    <fullName>SENIOR QA MANAGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_in_Cloudtaru__c</fullName>
        <formula>(MONTH(TODAY()) + (12*(YEAR(TODAY())-YEAR(Employee_Joining_Date__c))) - MONTH(Employee_Joining_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experience in Cloudtaru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freelancer_Employment_Type__c</fullName>
        <description>This field is required for calculating the salary of the freelancer employee based upon their choice from above field</description>
        <label>Freelancer Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Salary</fullName>
                </value>
                <value>
                    <fullName>Hourly Basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employee Master (Reviewer)</relationshipLabel>
        <relationshipName>Employee_Master2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubBand__c</fullName>
        <label>Sub Band</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Band__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-1</fullName>
                </value>
                <value>
                    <fullName>C-2</fullName>
                </value>
                <value>
                    <fullName>C-3</fullName>
                </value>
                <value>
                    <fullName>C-4</fullName>
                </value>
                <value>
                    <fullName>C-5</fullName>
                </value>
                <value>
                    <fullName>M-1</fullName>
                </value>
                <value>
                    <fullName>M-2</fullName>
                </value>
                <value>
                    <fullName>M-3</fullName>
                </value>
                <value>
                    <fullName>B-1</fullName>
                </value>
                <value>
                    <fullName>B-2</fullName>
                </value>
                <value>
                    <fullName>B-3</fullName>
                </value>
                <value>
                    <fullName>E-1</fullName>
                </value>
                <value>
                    <fullName>E-2</fullName>
                </value>
                <value>
                    <fullName>E-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>AppraiserReviewer_Field_Required</fullName>
        <active>true</active>
        <description>Every Employee must Have  a Appraiser and Reviewer Field</description>
        <errorConditionFormula>AND(
    RecordType.Name=&apos;Employee&apos;,

    ISBLANK(Reviewer__c),

    ISBLANK(Appraiser__c)
)</errorConditionFormula>
        <errorMessage>Please give the Appraiser and Reviewer Details</errorMessage>
    </validationRules>
</CustomObject>